--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -89,7 +89,7 @@
             ><span class="menu-title">Lista de usuarios</span></a
           >
         </div>
-        <div class="menu-item">
+        <!-- <div class="menu-item">
           <a
             class="menu-link without-sub"
             routerLinkActive="active"
@@ -98,7 +98,7 @@
               ><span class="bullet bullet-dot"></span></span
             ><span class="menu-title">Ver usuario</span></a
           >
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- <div
